--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -140,6 +140,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "methods = ('GET', 'POST')\n",
+    "request = {\"method\": \"PUT\", \"url\": \"contact.html\"}\n",
+    "request[\"method\"] in methods"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
