--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -927,22 +927,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1.2, 2, 3, 4]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, -5, 2]"
+       "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
+    "all(isinstance(x, int) for x in a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5//2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size=(2, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(size[0]):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "0\n",
+      "2\n",
+      "0\n",
+      "3\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "3\n",
+      "0\n",
+      "4\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[38;5;28mprint\u001b[39m(j \u001b[38;5;241m+\u001b[39m start_y)\n\u001b[1;32m     18\u001b[0m         \u001b[38;5;28mprint\u001b[39m(i \u001b[38;5;241m+\u001b[39m start_x)\n\u001b[0;32m---> 20\u001b[0m         max_list\u001b[38;5;241m.\u001b[39mappend(\u001b[43mmatrix\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mstart_y\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mstart_x\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     21\u001b[0m res_x\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mmax\u001b[39m(max_list))\n\u001b[1;32m     22\u001b[0m start_x \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m step[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = [[1, 2, 3, 4], [5, 6, 7, 8], [9, 8, 7, 6], [5, 4, 3, 2]]\n",
+    "size = (2, 2)\n",
+    "step = (2, 2)\n",
+    "\n",
+    "max_list = []\n",
+    "matrix_x = len(matrix[0])\n",
+    "matrix_y = len(matrix)\n",
+    "start_x = 0\n",
+    "start_y = 0\n",
+    "res_x = []\n",
+    "res = []\n",
+    "while matrix_y >= start_y:\n",
+    "    if start_x > matrix_x:\n",
+    "        start_y += step[1]\n",
+    "        continue\n",
+    "    for j in range(size[1]):\n",
+    "        for i in range(size[0]):\n",
+    "            print(j + start_y)\n",
+    "            print(i + start_x)\n",
+    "            \n",
+    "            max_list.append(matrix[j + start_y][i + start_x])\n",
+    "    res_x.append(max(max_list))\n",
+    "    start_x += step[0]\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 8]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_x"
    ]
   },
   {
