--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -1174,6 +1174,170 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stich = [\"Я к вам пишу – чего же боле?\",\n",
+    "        \"Что я могу еще сказать?\",\n",
+    "        \"Теперь, я знаю, в вашей воле\",\n",
+    "        \"Меня презреньем наказать.\",\n",
+    "        \"Но вы, к моей несчастной доле\",\n",
+    "        \"Хоть каплю жалости храня,\",\n",
+    "        \"Вы не оставите меня.\"]\n",
+    "symb = \"–?!,.;\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Я к вам пишу  чего же боле',\n",
+       " 'Что я могу еще сказать',\n",
+       " 'Теперь я знаю в вашей воле',\n",
+       " 'Меня презреньем наказать',\n",
+       " 'Но вы к моей несчастной доле',\n",
+       " 'Хоть каплю жалости храня',\n",
+       " 'Вы не оставите меня']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst_words = stich\n",
+    "\n",
+    "for y in list(symb):\n",
+    "    lst_words = list(map(lambda x: x.replace(y, \"\"), lst_words))\n",
+    "    \n",
+    "lst_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['–', '?', '!', ',', '.', ';']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(symb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Я к вам пишу – чего же боле?',\n",
+       " 'Что я могу еще сказать?',\n",
+       " 'Теперь, я знаю, в вашей воле',\n",
+       " 'Меня презреньем наказать.',\n",
+       " 'Но вы, к моей несчастной доле',\n",
+       " 'Хоть каплю жалости храня,',\n",
+       " 'Вы не оставите меня.']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stich\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stich = [\"Я к вам пишу – чего же боле?\",\n",
+    "        \"Что я могу еще сказать?\",\n",
+    "        \"Теперь, я знаю, в вашей воле\",\n",
+    "        \"Меня презреньем наказать.\",\n",
+    "        \"Но вы, к моей несчастной доле\",\n",
+    "        \"Хоть каплю жалости храня,\",\n",
+    "        \"Вы не оставите меня.\"]\n",
+    "\n",
+    "symb = \"–?!,.;\"\n",
+    "\n",
+    "stich_temp = stich\n",
+    "\n",
+    "for y in list(symb):\n",
+    "    stich_temp = list(map(lambda x: x.replace(y, \"\"), stich_temp))\n",
+    "lst_text = []\n",
+    "# for lst_words in stich_temp:\n",
+    "#     lst_text.append(StringText(lst_words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Я', 'к', 'вам', 'пишу', 'чего', 'же', 'боле']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stich_temp[0].split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Я', 'к', 'вам', 'пишу', 'чего', 'же', 'боле'],\n",
+       " ['Что', 'я', 'могу', 'еще', 'сказать'],\n",
+       " ['Теперь', 'я', 'знаю', 'в', 'вашей', 'воле'],\n",
+       " ['Меня', 'презреньем', 'наказать'],\n",
+       " ['Но', 'вы', 'к', 'моей', 'несчастной', 'доле'],\n",
+       " ['Хоть', 'каплю', 'жалости', 'храня'],\n",
+       " ['Вы', 'не', 'оставите', 'меня']]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x.split() for x in stich_temp]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
