--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -1338,6 +1338,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('qwqws', 'ferfe', 'fefe', 'dwfwq')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = ('qwqws','ferfe', 'fefe')\n",
+    "word = 'dwfwq'\n",
+    "words += (word,)\n",
+    "words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Мы будем устанавливать связь завтра днем.\n",
+      "['мы', 'будем', 'устанавливать', 'связь', 'завтра', 'днем']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = 'Мы будем устанавливать связь завтра днем.'\n",
+    "print(text)\n",
+    "import re\n",
+    "\n",
+    "text = re.sub(\"[^A-Za-zА-Яа-я ]\", \"\", text.lower())\n",
+    "text = text.split()\n",
+    "print(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = ('связь', 'связи', 'связью', 'связей', 'связям', 'связями', 'связях')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "связь\n",
+      "связи\n",
+      "связью\n",
+      "связей\n",
+      "связям\n",
+      "связями\n",
+      "связях\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in a:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
