--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -1418,6 +1418,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('dwe', 'wed', 'bfg', 'gerg')\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def a(*b):\n",
+    "    print(b)\n",
+    "    print(type(b))\n",
+    "    return(b)\n",
+    "    \n",
+    "f = ('dwe', 'wed',)\n",
+    "g = ('bfg', 'gerg')\n",
+    "aa = a(*(f + g))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('dwe', 'wed', 'bfg', 'gerg')"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'bfg' in aa"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
