--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -1827,20 +1827,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(map(lambda x: x.replace(y, \"\"), stich_temp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5\n",
+    "class Dimentions:\n",
+    "    def __init__(self, a, b, c):\n",
+    "        self.a = int(a) if isinstance(a, int) else float(a)\n",
+    "        self.b = int(b) if isinstance(b, int) else float(b)\n",
+    "        self.c = int(c) if isinstance(c, int) else float(c)\n",
+    "        \n",
+    "\n",
+    "    def __hash__(self):\n",
+    "        return hash((self.a, self.b, self.c,))\n",
+    "    \n",
+    "    def __setattr__(self, name, value):\n",
+    "        if value <= 0:\n",
+    "            raise ValueError(\"габаритные размеры должны быть положительными числами\")\n",
+    "        \n",
+    "\n",
+    "s_inp = \"1 2 3; 4 5 6.78; 1 2 3; 0 1 2.5\"\n",
+    "s_inp = s_inp.split('; ')\n",
+    "lst_dims = list(map(lambda x: Dimentions(*x.split()), s_inp))\n",
+    "lst_dims = sorted(lst_dims, key=hash)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = \"1 2 3; 4 5 6.78; 1 2 3; 0 1 2.5\"\n",
+    "lst = lst.split('; ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "can't use starred expression here (2387741750.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[126], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    *d\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't use starred expression here\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[['1', '2', '3'], ['4', '5', '6.78'], ['1', '2', '3'], ['0', '1', '2.5']]"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "*d"
+    "list(map(lambda x: x.split(), lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst_dims = list(map(lambda x: Dimentions(*x.split()), lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst_dims = list(map(lambda x: Dimentions(*x.split()), lst))\n",
+    "lst_dims = sorted(lst_dims, key=hash)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Dimentions at 0x122bdd5b0>,\n",
+       " <__main__.Dimentions at 0x122bdd460>,\n",
+       " <__main__.Dimentions at 0x122bdd2b0>,\n",
+       " <__main__.Dimentions at 0x122bde570>]"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst_dims\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Dimentions at 0x122bdcda0>,\n",
+       " <__main__.Dimentions at 0x122bdef00>,\n",
+       " <__main__.Dimentions at 0x122bdd220>,\n",
+       " <__main__.Dimentions at 0x122bdea50>]"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst_dims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Dimentions at 0x122bdea50>,\n",
+       " <__main__.Dimentions at 0x122bdef00>,\n",
+       " <__main__.Dimentions at 0x122bdcda0>,\n",
+       " <__main__.Dimentions at 0x122bdd220>]"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(lst_dims, key=hash)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Балакирев', '34', '2048'],\n",
+       " ['Mediel', '27', '0'],\n",
+       " ['Влад', '18', '9012'],\n",
+       " ['Nina P', '33', '0']]"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst_in = ['Балакирев; 34; 2048', 'Mediel; 27; 0', 'Влад; 18; 9012', 'Nina P; 33; 0']\n",
+    "lst_in = list(map(lambda x: x.split('; '), lst_in))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = ['sc_lib@list.ru; От Балакирева; Успехов в IT!', 'mail@list.ru; Выгодное предложение; Вам одобрен кредит.', 'mail123@list.ru; Розыгрыш; Вы выиграли 1 млн. руб. Переведите 30 тыс. руб., чтобы его получить.']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sc_lib@list.ru; От Балакирева; Успехов в IT!',\n",
+       " 'mail@list.ru; Выгодное предложение; Вам одобрен кредит.',\n",
+       " 'mail123@list.ru; Розыгрыш; Вы выиграли 1 млн. руб. Переведите 30 тыс. руб., чтобы его получить.']"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3]"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1] + [3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 5, 5, 7, 8, 9, 3, 6]"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "a += [2, 5, 5, 7, 8, 9, 3,6]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[-1]"
    ]
   },
   {
