--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -1787,24 +1787,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Random.randint() missing 2 required positional arguments: 'a' and 'b'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[116], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandint\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Random.randint() missing 2 required positional arguments: 'a' and 'b'"
-     ]
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import random\n",
-    "random.randint()"
+    "random.randint(0, 4)"
    ]
   },
   {
@@ -1836,9 +1835,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "габаритные размеры должны быть положительными числами",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 19\u001b[0m\n\u001b[1;32m     17\u001b[0m s_inp \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1 2 3; 4 5 6.78; 1 2 3; 0 1 2.5\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     18\u001b[0m s_inp \u001b[38;5;241m=\u001b[39m s_inp\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m; \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 19\u001b[0m lst_dims \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mDimentions\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ms_inp\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m lst_dims \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(lst_dims, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mhash\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[37], line 19\u001b[0m, in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     17\u001b[0m s_inp \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1 2 3; 4 5 6.78; 1 2 3; 0 1 2.5\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     18\u001b[0m s_inp \u001b[38;5;241m=\u001b[39m s_inp\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m; \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 19\u001b[0m lst_dims \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[43mDimentions\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m, s_inp))\n\u001b[1;32m     20\u001b[0m lst_dims \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(lst_dims, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mhash\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[37], line 4\u001b[0m, in \u001b[0;36mDimentions.__init__\u001b[0;34m(self, a, b, c)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, a, b, c):\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43ma\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(a) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(a, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mfloat\u001b[39m(a)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mb \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(b) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(b, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mfloat\u001b[39m(b)\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(c) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(c, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mfloat\u001b[39m(c)\n",
+      "Cell \u001b[0;32mIn[37], line 14\u001b[0m, in \u001b[0;36mDimentions.__setattr__\u001b[0;34m(self, name, value)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__setattr__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name, value):\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m value \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 14\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mгабаритные размеры должны быть положительными числами\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: габаритные размеры должны быть положительными числами"
+     ]
+    }
+   ],
    "source": [
     "# 5\n",
     "class Dimentions:\n",
@@ -2163,6 +2177,486 @@
    "source": [
     "any(a1, a2, a3, a4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def lensas(*s):\n",
+    "    print(s)    \n",
+    "lensas(1,2,4,5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43ma\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coords1 = [1,3,4,5]\n",
+    "coords2 = [2,3,4,5]\n",
+    "a = (list(map(sum, zip(coords1, coords2))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 6, 8, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "lensas(*a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1,2,3] == [1,2,23]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "__pole_cells = ((1,2,3), (4,5,6), (7,8,9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(__pole_cells)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 5, 6)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__pole_cells[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(True, bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(4,5,6) in __pole_cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cell:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.__is_mine = False\n",
+    "        self.__number = 0\n",
+    "        self.__is_open = False\n",
+    "    \n",
+    "    @property\n",
+    "    def is_mine(self):\n",
+    "        return self.__is_mine\n",
+    "    \n",
+    "    @is_mine.setter\n",
+    "    def is_mine(self, value):\n",
+    "        self.__is_mine = value\n",
+    "        \n",
+    "    @property\n",
+    "    def number(self):\n",
+    "        return self.__number\n",
+    "    \n",
+    "    @number.setter\n",
+    "    def number(self, value):\n",
+    "        self.__number = value\n",
+    "    \n",
+    "    @property\n",
+    "    def is_open(self):\n",
+    "        return self.__is_open\n",
+    "    \n",
+    "    @is_open.setter\n",
+    "    def is_open(self, value):\n",
+    "        self.__is_open = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 3\n",
+    "M = 2\n",
+    "res = tuple()\n",
+    "for _ in range(N):\n",
+    "    tmp = tuple()\n",
+    "    for _ in range(M):\n",
+    "        tmp += (Cell(),)\n",
+    "    res += (tmp,)\n",
+    "row = (Cell(),) * M  # создаем список-строку длиной M\n",
+    "A = (row,) * N  # создаем массив (список) из N строк"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((<__main__.Cell at 0x105f173b0>, <__main__.Cell at 0x105ee5d90>),\n",
+       " (<__main__.Cell at 0x105f13470>, <__main__.Cell at 0x105ee62d0>),\n",
+       " (<__main__.Cell at 0x105ee4b60>, <__main__.Cell at 0x105ee4560>))"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((<__main__.Cell at 0x105f173b0>, <__main__.Cell at 0x105ee5d90>),\n",
+       " (<__main__.Cell at 0x105f13470>, <__main__.Cell at 0x105ee62d0>),\n",
+       " (<__main__.Cell at 0x105ee4b60>, <__main__.Cell at 0x105ee4560>))"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res[0][0].is_mine = True\n",
+    "res[0][0].is_open = True\n",
+    "res[1][0].is_open = True\n",
+    "res[2][1].is_open = True\n",
+    "res[0][1].is_open = True\n",
+    "res[1][1].is_open = True\n",
+    "res[1][1].is_mine = True\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* 0 \n",
+      "0 * \n",
+      "# 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in res:\n",
+    "    for c in row:\n",
+    "        # print(c.is_open, end=' ')\n",
+    "        if c.is_open:\n",
+    "            if c.is_mine:\n",
+    "                print('*', end=' ')\n",
+    "            else:\n",
+    "                print(c.number, end=' ')\n",
+    "        else:\n",
+    "            print('#', end=' ')\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 1\n",
+    "j = 1\n",
+    "try:\n",
+    "    res[i - 1][j - 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i - 1][j].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i - 1][j + 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i][j - 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i][j + 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i + 1][j - 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i + 1][j].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i + 1][j + 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* 1 \n",
+      "1 * \n",
+      "# 1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in res:\n",
+    "    for c in row:\n",
+    "        # print(c.is_open, end=' ')\n",
+    "        if c.is_open:\n",
+    "            if c.is_mine:\n",
+    "                print('*', end=' ')\n",
+    "            else:\n",
+    "                print(c.number, end=' ')\n",
+    "        else:\n",
+    "            print('#', end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "j = 0\n",
+    "try:\n",
+    "    res[i - 1][j - 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i - 1][j].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i - 1][j + 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i][j - 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    print(res[i][j + 1].number)\n",
+    "    res[i][j + 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i + 1][j - 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i + 1][j].number += 1\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "try:\n",
+    "    res[i + 1][j + 1].number += 1\n",
+    "except IndexError:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* 5 \n",
+      "3 * \n",
+      "# 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in res:\n",
+    "    for c in row:\n",
+    "        # print(c.is_open, end=' ')\n",
+    "        if c.is_open:\n",
+    "            if c.is_mine:\n",
+    "                print('*', end=' ')\n",
+    "            else:\n",
+    "                print(c.number, end=' ')\n",
+    "        else:\n",
+    "            print('#', end=' ')\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
