--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -2395,85 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 3\n",
-    "M = 2\n",
-    "res = tuple()\n",
-    "for _ in range(N):\n",
-    "    tmp = tuple()\n",
-    "    for _ in range(M):\n",
-    "        tmp += (Cell(),)\n",
-    "    res += (tmp,)\n",
-    "row = (Cell(),) * M  # создаем список-строку длиной M\n",
-    "A = (row,) * N  # создаем массив (список) из N строк"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((<__main__.Cell at 0x105f173b0>, <__main__.Cell at 0x105ee5d90>),\n",
-       " (<__main__.Cell at 0x105f13470>, <__main__.Cell at 0x105ee62d0>),\n",
-       " (<__main__.Cell at 0x105ee4b60>, <__main__.Cell at 0x105ee4560>))"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((<__main__.Cell at 0x105f173b0>, <__main__.Cell at 0x105ee5d90>),\n",
-       " (<__main__.Cell at 0x105f13470>, <__main__.Cell at 0x105ee62d0>),\n",
-       " (<__main__.Cell at 0x105ee4b60>, <__main__.Cell at 0x105ee4560>))"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res[0][0].is_mine = True\n",
-    "res[0][0].is_open = True\n",
-    "res[1][0].is_open = True\n",
-    "res[2][1].is_open = True\n",
-    "res[0][1].is_open = True\n",
-    "res[1][1].is_open = True\n",
-    "res[1][1].is_mine = True\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -2487,6 +2409,24 @@
     }
    ],
    "source": [
+    "N = 3\n",
+    "M = 2\n",
+    "res = tuple()\n",
+    "for _ in range(N):\n",
+    "    tmp = tuple()\n",
+    "    for _ in range(M):\n",
+    "        tmp += (Cell(),)\n",
+    "    res += (tmp,)\n",
+    "# row = (Cell(),) * M  # создаем список-строку длиной M\n",
+    "# A = (row,) * N  # создаем массив (список) из N строк\n",
+    "res[0][0].is_mine = True\n",
+    "res[0][0].is_open = True\n",
+    "res[1][0].is_open = True\n",
+    "res[2][1].is_open = True\n",
+    "res[0][1].is_open = True\n",
+    "res[1][1].is_open = True\n",
+    "res[1][1].is_mine = True\n",
+    "\n",
     "for row in res:\n",
     "    for c in row:\n",
     "        # print(c.is_open, end=' ')\n",
@@ -2502,49 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = 1\n",
-    "j = 1\n",
-    "try:\n",
-    "    res[i - 1][j - 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
-    "    res[i - 1][j].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
-    "    res[i - 1][j + 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
-    "    res[i][j - 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
-    "    res[i][j + 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
-    "    res[i + 1][j - 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
-    "    res[i + 1][j].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
-    "    res[i + 1][j + 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -2558,6 +2456,25 @@
     }
    ],
    "source": [
+    "i = 1\n",
+    "j = 1\n",
+    "if (i - 1 >= 0) and (j - 1 >= 0):\n",
+    "    res[i - 1][j - 1].number += 1\n",
+    "if i - 1 >= 0:\n",
+    "    res[i - 1][j].number += 1\n",
+    "if (i - 1 >= 0) and (j + 1 <= len(res[0]) - 1):\n",
+    "    res[i - 1][j + 1].number += 1\n",
+    "if j - 1 >= 0:\n",
+    "    res[i][j - 1].number += 1\n",
+    "if j + 1 <= len(res[0]) - 1:\n",
+    "    res[i][j + 1].number += 1\n",
+    "if (i + 1 <= len(res) - 1) and (j - 1 >= 0):\n",
+    "    res[i + 1][j - 1].number += 1\n",
+    "if i + 1 <= len(res) - 1:\n",
+    "    res[i + 1][j].number += 1\n",
+    "if (i + 1 <= len(res) - 1) and (j + 1 <= len(res[0]) - 1):\n",
+    "    res[i + 1][j + 1].number += 1\n",
+    "\n",
     "for row in res:\n",
     "    for c in row:\n",
     "        # print(c.is_open, end=' ')\n",
@@ -2573,67 +2490,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "* 3 \n",
+      "3 * \n",
+      "# 1 \n"
      ]
     }
    ],
    "source": [
     "i = 0\n",
     "j = 0\n",
-    "try:\n",
+    "if (i - 1 >= 0) and (j - 1 >= 0):\n",
     "    res[i - 1][j - 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
+    "if i - 1 >= 0:\n",
     "    res[i - 1][j].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
+    "if (i - 1 >= 0) and (j + 1 <= len(res[0]) - 1):\n",
     "    res[i - 1][j + 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
+    "if j - 1 >= 0:\n",
     "    res[i][j - 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
-    "    print(res[i][j + 1].number)\n",
+    "if j + 1 <= len(res[0]) - 1:\n",
     "    res[i][j + 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
+    "if (i + 1 <= len(res) - 1) and (j - 1 >= 0):\n",
     "    res[i + 1][j - 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
+    "if i + 1 <= len(res) - 1:\n",
     "    res[i + 1][j].number += 1\n",
-    "except IndexError:\n",
-    "    pass\n",
-    "try:\n",
+    "if (i + 1 <= len(res) - 1) and (j + 1 <= len(res[0]) - 1):\n",
     "    res[i + 1][j + 1].number += 1\n",
-    "except IndexError:\n",
-    "    pass"
+    "\n",
+    "for row in res:\n",
+    "    for c in row:\n",
+    "        # print(c.is_open, end=' ')\n",
+    "        if c.is_open:\n",
+    "            if c.is_mine:\n",
+    "                print('*', end=' ')\n",
+    "            else:\n",
+    "                print(c.number, end=' ')\n",
+    "        else:\n",
+    "            print('#', end=' ')\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* 5 \n",
-      "3 * \n",
-      "# 5 \n"
+      "* 3 \n",
+      "2 * \n",
+      "# 3 \n"
      ]
     }
    ],
